@@ -1,16 +1,0 @@
-<!-- begin $Id: run_lane_update_all_good_bad.tt2 3026 2008-09-12 16:22:30Z rmp $ -->
-<div>
-  <h2>Updated manual QC for [% model.run.name %]</h2>
-[% IF model.qc_reverted %]
-  <p>QC reverted for all lanes of [% model.run.name %].</p>
-  <p>As this has reset the run status to QC review pending, please add an annotation for [% model.run.name %].</p>
-[% ELSE %]
-  <p>All lanes for [% model.run.name %] updated good/bad.</p>
-  <p>As this has moved the run status to QC complete, please add an annotation for [% model.run.name %].</p>
-[% END %]
-  [% PROCESS run_annotation_add_input_form.tt2 %]
-</div>
-<script type="text/javascript">
-  document.title='[% model.run.name %] QC lane update';
-</script>
-<!-- end $Id: run_lane_update_all_good_bad.tt2 3026 2008-09-12 16:22:30Z rmp $ -->
