@@ -1,24 +1,0 @@
-<!-- begin $Id: run_lane_update_good_bad.tt2 3225 2008-10-13 14:04:58Z rmp $ -->
-<div>
- <h2>Update of Lane [% model.id_run_lane %] to Good or Bad</h2>
- <p>Lane [% model.id_run_lane %] ([% model.run.name %], [% model.position %]) updated as [% IF model.good_bad %]good[% ELSE %]bad[% END %].</p>
-  
- [% IF model.good_bad %]
-  [% IF model.last_lane %]
-  <p>As this is the last lane of run [% model.run.name %] to be QC reviewed, please leave an annotation.</p>
-  [% PROCESS run_annotation_add_input_form.tt2 %]
-  [% ELSE %]<p>Please click <a href="[% SCRIPT_NAME %]/run/[% model.id_run %]">here</a> to continue.</p>
-  [% END %]
- [% ELSE %]
- <p>As this is bad, please add an annotation for this lane.</p>
- [% PROCESS run_lane_annotation_add_input_form.tt2 %]
- [% END %]
-</div>
-
-<script type="text/javascript">
-  document.title='Lane [% model.id_run_lane %] QC Review Update';
-  [% IF model.last_lane %][% ELSE %]
-  [% IF model.good_bad %]document.location.href = '[% SCRIPT_NAME %]/run/[% model.id_run %]';[% END %]
-  [% END %]
-</script>
-<!-- end $Id: run_lane_update_good_bad.tt2 3225 2008-10-13 14:04:58Z rmp $ -->
