@@ -1,8 +1,0 @@
-<!-- begin $Id: run_update_good_bad.tt2 13585 2011-07-07 13:23:08Z ajb $ -->
-<div>
-All lanes for Run [% model.id_run %] updated good/bad.
-<script type="text/javascript">
- document.location.href="[% SCRIPT_NAME %]/run/[% model.id_run %]";
-</script>
-</div>
-<!-- end $Id: run_update_good_bad.tt2 13585 2011-07-07 13:23:08Z ajb $ -->
