@@ -11,12 +11,8 @@ use English qw(-no_match_vars);
 use npg::model::run_lane;
 use npg::model::run_status;
 use npg::model::run_status_dict;
-use Readonly;
 
 our $VERSION = '0';
-
-Readonly::Scalar our $GRAPH_HEIGHT => 200;
-Readonly::Scalar our $GRAPH_WIDTH  => 400;
 
 sub authorised {
   my $self      = shift;
@@ -35,98 +31,6 @@ sub authorised {
   }
 
   return $self->SUPER::authorised();
-}
-
-sub update {
-  my ($self, @args) = @_;
-  my $util     = $self->util();
-  my $cgi      = $util->cgi();
-#  my $good_bad = $cgi->param('good_bad');
-
-#  if(defined $good_bad && $good_bad eq q[]) {
-#    $cgi->delete('good_bad');
-#  }
-
-  return $self->SUPER::update(@args);
-}
-
-#sub update_good_bad {
-#  my ($self, @args) = @_;
-#  $self->SUPER::update(@args);
-#  my $run_model = $self->model->run();
-#
-#  for my $run_lane (@{$run_model->run_lanes()}) {
-#    if(! defined $run_lane->good_bad()) {
-#      return 1;
-#    }
-#  }
-#
-#  $self->model->{last_lane}++;
-#  return $self->update_status_to_qc_complete();
-#}
-
-# TODO: move this into model::run.pm where it belongs - this isn't an operation on one run_lane.
-#sub update_all_good_bad {
-#  my $self      = shift;
-#  my $util      = $self->util;
-#  my $cgi       = $util->cgi;
-#  my $good_bad  = $cgi->param('good_bad');
-#  my $model     = $self->model;
-#  my $run_model = $model->run;
-#  my $tr_state  = $util->transactions;
-#
-#  $util->transactions(0);
-#
-#  if(defined $good_bad && $good_bad eq q[]) {
-#    $good_bad = undef;
-#  }
-#
-#  for my $run_lane (@{$run_model->run_lanes}) {
-#    if(!defined $good_bad ||             # resetting lanes
-#       !defined $run_lane->good_bad()) { # set remaining lanes
-#      $run_lane->good_bad($good_bad);
-#      $run_lane->update();
-#    }
-#  }
-#
-#  $util->transactions($tr_state);
-#
-#  if(!defined $good_bad) {
-#    #########
-#    # if all lanes have been UNset, revert run status back to qc review pending
-#    #
-#    my $rsd = npg::model::run_status_dict->new({
-#                 description => 'qc review pending',
-#                 util        => $util,
-#                 });
-#    my $run_status = npg::model::run_status->new({
-#              id_run             => $model->id_run,
-#              id_run_status_dict => $rsd->id_run_status_dict,
-#              id_user            => $util->requestor->id_user,
-#              util               => $util,
-#             });
-#    $model->{qc_reverted} = 1;
-#    return $run_status->create;
-#  }
-#
-#  return $self->update_status_to_qc_complete;
-#}
-
-sub update_status_to_qc_complete {
-  my $self  = shift;
-  my $model = $self->model;
-  my $util  = $self->util;
-  my $rsd   = npg::model::run_status_dict->new({
-                  description => 'qc complete',
-                  util        => $util,
-                 });
-  my $run_status = npg::model::run_status->new({
-                  id_run             => $model->id_run,
-                  id_run_status_dict => $rsd->id_run_status_dict,
-                  id_user            => $util->requestor->id_user,
-                  util               => $util,
-                 });
-  return $run_status->create;
 }
 
 sub list_tag {
@@ -180,26 +84,16 @@ sub update_tags {
 
   } or do {
     $self->util->transactions($tr_state);
-
     $tr_state and $dbh->rollback();
-    croak $EVAL_ERROR . q[Rolled back attempt to save info for the tags for run lane ] . $self->model->id_run_lane();
+    croak $EVAL_ERROR .
+      q[Rolled back attempt to save info for the tags for run lane ] .
+      $self->model->id_run_lane();
   };
 
   $self->util->transactions($tr_state);
 
   $tr_state and $dbh->commit();
   return;
-}
-
-sub render {
-  my ($self, @args) = @_;
-
-  my $aspect = $self->aspect();
-  if($aspect eq 'read_png') {
-    return $self->read_png();
-  }
-
-  return $self->SUPER::render(@args);
 }
 
 1;
@@ -220,19 +114,9 @@ npg::view::run_lane - view handling for run_lanes
 
 =head2 authorised - adds in additional authorization for certain aspects/usergroup members
 
-=head2 update - handling NULL good_bad parameter
-
-=head2 update_good_bad - handles incoming setting of good/bad run lane to database
-
-=head2 update_all_good_bad - handles setting of all run_lanes to good or bad if not already assigned good/bad
-
 =head2 list_tag
 
 =head2 update_tags - handles incoming form of tags to be saved for this run_lane
-
-=head2 render - handles rendering correct view type
-
-=head2 update_status_to_qc_complete - handles setting the run status to 'qc complete' when the last run lane has been QC reviewed
 
 =head1 DIAGNOSTICS
 
