@@ -9,194 +9,162 @@
   tile_count: 120
   tracks: 2
   position: 8
-- good_bad: ~
-  id_run: 6588
+- id_run: 6588
   id_run_lane: 52338
   position: 1
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6588
+- id_run: 6588
   id_run_lane: 52339
   position: 2
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6588
+- id_run: 6588
   id_run_lane: 52340
   position: 3
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6588
+- id_run: 6588
   id_run_lane: 52341
   position: 4
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6588
+- id_run: 6588
   id_run_lane: 52342
   position: 5
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6588
+- id_run: 6588
   id_run_lane: 52343
   position: 6
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6588
+- id_run: 6588
   id_run_lane: 52344
   position: 7
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6588
+- id_run: 6588
   id_run_lane: 52345
   position: 8
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6668
+- id_run: 6668
   id_run_lane: 52978
   position: 1
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6668
+- id_run: 6668
   id_run_lane: 52979
   position: 2
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6668
+- id_run: 6668
   id_run_lane: 52980
   position: 3
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6668
+- id_run: 6668
   id_run_lane: 52981
   position: 4
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6668
+- id_run: 6668
   id_run_lane: 52982
   position: 5
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6668
+- id_run: 6668
   id_run_lane: 52983
   position: 6
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6668
+- id_run: 6668
   id_run_lane: 52984
   position: 7
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6668
+- id_run: 6668
   id_run_lane: 52985
   position: 8
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6670
+- id_run: 6670
   id_run_lane: 52994
   position: 1
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6670
+- id_run: 6670
   id_run_lane: 52995
   position: 2
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6670
+- id_run: 6670
   id_run_lane: 52996
   position: 3
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6670
+- id_run: 6670
   id_run_lane: 52997
   position: 4
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6670
+- id_run: 6670
   id_run_lane: 52998
   position: 5
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6670
+- id_run: 6670
   id_run_lane: 52999
   position: 6
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6670
+- id_run: 6670
   id_run_lane: 53000
   position: 7
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6670
+- id_run: 6670
   id_run_lane: 53001
   position: 8
   tile_count: 32
   tracks: 4
-- good_bad: ~
-  id_run: 6699
+- id_run: 6699
   id_run_lane: 53226
   position: 1
   tile_count: 120
   tracks: 2
-- good_bad: ~
-  id_run: 6699
+- id_run: 6699
   id_run_lane: 53227
   position: 2
   tile_count: 120
   tracks: 2
-- good_bad: ~
-  id_run: 6699
+- id_run: 6699
   id_run_lane: 53228
   position: 3
   tile_count: 120
   tracks: 2
-- good_bad: ~
-  id_run: 6699
+- id_run: 6699
   id_run_lane: 53229
   position: 4
   tile_count: 120
   tracks: 2
-- good_bad: ~
-  id_run: 6699
+- id_run: 6699
   id_run_lane: 53230
   position: 5
   tile_count: 120
   tracks: 2
-- good_bad: ~
-  id_run: 6699
+- id_run: 6699
   id_run_lane: 53231
   position: 6
   tile_count: 120
   tracks: 2
-- good_bad: ~
-  id_run: 6699
+- id_run: 6699
   id_run_lane: 53232
   position: 7
   tile_count: 120
   tracks: 2
-- good_bad: ~
-  id_run: 6699
+- id_run: 6699
   id_run_lane: 53233
   position: 8
   tile_count: 120
